--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+
+    <string name="andi_hasan">Andi Hasan As</string>
+    <string name="andi_email">andihasanelfalakiy@gmail.com</string>
+    <string name="menu_cart">Cart</string>
+    <string name="menu_map">Maps</string>
+    <string name="menu_hotel">Hotel</string>
+    <string name="menu_subway">Subway</string>
 </resources>
