--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="menu_map">Maps</string>
     <string name="menu_hotel">Hotel</string>
     <string name="menu_subway">Subway</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="this_is_cart">This is Cart Fragment</string>
 </resources>
